# spellbook

./: .gitignore  LICENSE.md  README.md
backend/: Cargo.toml  icon.rc
backend/pages/: index.html  page.js
backend/src/: auth.rs  config.rs  main.rs  requests.rs  run.rs
frontend/: elm.json
frontend/src/: Colors.elm  Main.elm  Style.elm  SyntaxHighlight.elm  Widgets.elm
