[package]
name = "spellbook"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
hyper = { version = "1.6", features = ["full"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dirs = "6.0"
http-body-util = "0.1"
clap = { version = "4.5", features = ["derive"] }
open = "5.3"
percent-encoding = "2.3"
lazy_static = "1.5"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "3.0"
